--- a/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/10.9500-9999-of-mysql-mode.md
+++ b/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/10.9500-9999-of-mysql-mode.md
@@ -381,6 +381,17 @@ ERROR 9695 (02000) : Unhandled user-defined not found condition
   <p>该错误码从 V4.1.0 版本开始引入。</p>
 </main>
 
+## ERROR 9747 (HY000) : malformed ps packet
+
+* OceanBase 错误码：9747
+* 错误原因：客户端发送的预处理语句（prepared statement）数据包格式错误。
+* 解决方法：可以检查客户端和服务器版本是否兼容，确保客户端和服务器版本匹配。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ERROR 20000 (HY000) : The stored procedure 'raise_application_error' was called which causes this error to be generated","-%05ld: %.\*s
 ------------------------------------------------------------------------------------------------------------------------------------------------------------
 
