--- a/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
+++ b/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
@@ -1002,7 +1002,7 @@
 
 * 兼容 MySQL 错误码：1304
 
-## ERROR 1305 (42000) : FUNCTION %.\*s does not exist
+## ERROR 1305 (42000) : %s %.*s does not exist
 
 * OceanBase 错误码：5055
 
@@ -1663,6 +1663,20 @@
 * [创建分区表错误，错误代码 1499/ORA-00600](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000000076?back=kb)
 * [创建分区表错误，错误代码 1499](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000010175?back=kb)
 
+## ERROR 1500 (HY000) : It is only possible to mix RANGE/LIST partitioning with HASH/KEY partitioning for subpartitioning
+
+* OceanBase 错误码：4398
+* 兼容 MySQL 错误码：1500
+* 错误原因：在创建分区表时，使用了不兼容的分区方式，例如在子分区中同时使用 RANGE/LIST 分区和 HASH/KEY 分区。
+* 解决方法：
+  * 修改分区方式：如果要在子分区中同时使用 RANGE/LIST 分区和 HASH/KEY 分区，可以考虑修改分区方式，使用兼容的分区方式。注意修改分区方式或拆分分区表可能会影响到现有的数据和应用程序，请谨慎操作。
+  * 分离分区：如果需要使用不兼容的分区方式，可以考虑将分区表拆分为多个表，每个表使用不同的分区方式。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ## ERROR 1503 (HY000) : A %s must include all columns in the table's partitioning function
 
 * OceanBase 错误码：5261
@@ -1710,6 +1724,42 @@
 * OceanBase 错误码：5280
 
 * 兼容 MySQL 错误码：1517
+
+## ERROR 1517 (HY000) : Duplicate partition name %.*s
+
+* OceanBase 错误码：5493
+* 兼容 MySQL 错误码：1517
+* 错误原因：修改某表分区名时，分区名与该表已有分区名重复（由于 MySQL 本身没有二级分区概念，所以一级和二级分区名共用该错误码）分区名称重复。
+* 解决方法：修改分区名或删除分区名重复分区。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 1517 (HY000) : Duplicate partition name %.*s
+
+* OceanBase 错误码：5494
+* 兼容 MySQL 错误码：1517
+* 错误原因：分区名称重复。
+* 解决方法：修改分区名或删除重复分区。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 1517 (HY000) : missing or invalid WAIT interval
+
+* OceanBase 错误码：5495
+* 兼容 MySQL 错误码：1517
+* 错误原因：在使用 MySQL 的 WAIT 命令时，指定的等待时间参数不合法或缺失。
+* 解决方法：检查使用 WAIT 命令的语法，确保等待时间参数正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
 
 ## ERROR 1520 (HY000) : Reorganize of range partitions cannot change total ranges except for last partition where it can extend the range
 
@@ -2394,6 +2444,18 @@
 * OceanBase 错误码：5422
 
 * 兼容 MySQL 错误码：3151
+
+## ERROR 1351 (HY000) : View's SELECT contains a variable or parameter
+
+* OceanBase 错误码：9748
+* 兼容 MySQL 错误码：1351
+* 错误原因：视图的 SELECT 语句包含了变量或参数。
+* 解决方法：可以检查查询语句，确保查询语句中不包含变量或参数。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
 
 ## ERROR 3153 (42000) : The path expression is not allowed in this context
 
@@ -3144,6 +3206,42 @@ ERROR 3753 (42000) : Cannot create a functional index on a function that returns
   <p>该错误码从 V3.2.4 版本开始引入。</p>
 </main>
 
+## ERROR 3754 (HY000) : Functional index '%.*s' cannot refer to an auto-increment column.
+
+* OceanBase 错误码：5496
+* 兼容 MySQL 错误码：3754
+* 错误原因：在创建函数索引时，使用了自增长列作为函数索引的一部分，而自增长列不能作为函数索引的一部分。
+* 解决方法：修改函数索引：将自增长列从函数索引中移除，或者使用其他列代替自增长列作为函数索引的一部分。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 3757 (HY000) : Cannot create a functional index on an expression that returns a BLOB or TEXT. Please consider using CAST.
+
+* OceanBase 错误码：5498
+* 兼容 MySQL 错误码：3757
+* 错误原因：在创建函数索引时，使用了返回 BLOB 或 TEXT 类型的表达式，而 BLOB 或 TEXT 类型的表达式不能用于创建函数索引。
+* 解决方法：使用 CAST 函数：可以使用 CAST 函数将 BLOB 或 TEXT 类型的表达式转换为其他类型，然后使用转换后的表达式创建函数索引。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 3758 (HY000) : Expression of functional index contains a disallowed function.
+
+* OceanBase 错误码：5905
+* 兼容 MySQL 错误码：3758
+* 错误原因：在创建函数索引时，使用了不支持的函数，索引函数使用 SYSDATE 或用户环境。
+* 解决方法：索引函数必须是纯函数（RNDS 、RNPS 、WNDS 和 WNPS）。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ERROR 3760 (HY000) : Spatial functional index is not supported.
 ---------------------------------------------------------------------------------------------------
 
@@ -3154,6 +3252,18 @@ ERROR 3760 (HY000) : Spatial functional index is not supported.
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ERROR 3762 (HY000) : Functional index on a column is not supported. Consider using a regular index instead.
+
+* OceanBase 错误码：5499
+* 兼容 MySQL 错误码：3762
+* 错误原因：在创建函数索引时，索引函数是单个列。
+* 解决方法：请使用普通索引。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
 </main>
 
 ## ERROR 3812 (HY000) : An expression of non-boolean type specified to a check constraint \\'%.\*s\\'
@@ -3229,6 +3339,20 @@ ERROR 3760 (HY000) : Spatial functional index is not supported.
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <p>该错误码从 V4.0.0 版本开始引入。</p>
+</main>
+
+## ERROR 3837 (HY000) : Column '%.*s' has a functional index dependency and cannot be dropped.
+
+* OceanBase 错误码：5497
+* 兼容 MySQL 错误码：3837
+* 错误原因：要删除的列存在函数索引依赖关系，不能直接删除。
+* 解决方法：
+  * 删除函数索引：如果要删除的列是函数索引的一部分，可以先删除函数索引，然后再删除该列。
+  * 修改函数索引：如果要删除的列是函数索引的一部分，可以修改函数索引，将该列从函数索引中移除，然后再删除该列。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
 </main>
 
 ## ERROR 3939 (HY000) : Table has multiple constraints with the name \\'%.\*s\\'. Please use constraint specific \\'%.\*s\\' clause
