--- a/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/4.4500-4999-of-mysql-mode.md
+++ b/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/4.4500-4999-of-mysql-mode.md
@@ -1048,7 +1048,7 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
   <p>该错误码从 V4.0.0 版本开始引入。</p>
 </main>
 
-## ERROR 4747 (HY000) : arbitration service does not exist
+## ERROR 4747 (HY000) : arbitration service does not exist, %s
 
 * OceanBase 错误码：4747
 
@@ -1061,7 +1061,7 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
   <p>该错误码从 V4.1.0 版本开始引入。</p>
 </main>
 
-## ERROR 4748 (HY000) : arbitration service already exist
+## ERROR 4748 (HY000) : arbitration service already exist, %s
 
 * OceanBase 错误码：4748
 
@@ -1140,4 +1140,48 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <p>该错误码从 V4.1.0 版本开始引入。</p>
+</main>
+
+## ERROR 4757 (HY000) : Cluster info may remain on arbitration server '%.*s', please make sure whether to use ob_admin to clean it.
+
+* OceanBase 错误码：4757
+* 错误原因：在替换或者删除集群仲裁服务时，检测到集群信息可能仍然存在于仲裁服务器上，需要使用 ob_admin 工具清除集群信息。
+* 解决方法： 使用 ob_admin 工具清除之前，需要确认是否需要清除集群信息。如果确定需要清除集群信息，可以使用 ob_admin 工具清除；如果不确定，则不要执行清除操作。  
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4758 (HY000) : the arbitration service may be unavailable, please check and retry
+
+* OceanBase 错误码：4758
+* 错误原因：检测到仲裁服务可能不可用，需要检查并重试。
+* 解决方法：检查仲裁服务状态或检查网络连接。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4759 (HY000) : An error was ignored when accessing virtual table, actual error code: %d
+
+* OceanBase 错误码：4759
+* 错误原因：在访问虚拟表时发生了错误，但是错误被忽略了，例如发生的错误码是 1305。
+* 解决方法：查看错误码 1305 的错误日志  ，找到访问虚拟表时发生的错误信息，根据错误日志中的信息，修复访问虚拟表时发生的错误。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 4760 (HY000) : log stream is offline
+
+* OceanBase 错误码：4760
+* 错误原因：日志流正在从本机器上下线，不能正确读取 。
+* 解决方法： 请重新执行 SQL。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
 </main>
