--- a/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/9.9000-9499-of-mysql-mode.md
+++ b/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/9.9000-9499-of-mysql-mode.md
@@ -781,6 +781,34 @@ ERROR 9086 (HY000) : backup advance checkpoint by flush timeout
   <p>该错误码从 V4.1.0 版本开始引入。</p>
 </main>
 
+## ERROR 9088 (HY000) : log restore source tenant state not match, switchover to primary not allowed
+
+* OceanBase 错误码：9088
+* 错误原因：日志恢复源租户/日志流状态不匹配，不允许当前租户切换为主租户。
+* 解决方法：
+   1. 检查备份恢复的源租户状态与目标租户状态是否匹配。
+   2. 检查主从复制配置是否正确。
+   3. 检查源租户的备份是否完整，以及目标租户的恢复是否正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ERROR 9089 (HY000) : log restore source ls state not match, switchover to primary not allowed
+
+* OceanBase 错误码：9089
+* 错误原因：日志恢复源租户/日志流状态不匹配，不允许当前租户切换为主租户。
+* 解决方法：
+   1. 检查备份恢复的源日志状态与目标日志状态是否匹配。
+   2. 检查主从复制配置是否正确。
+   3. 检查源日志的备份是否完整，以及目标日志的恢复是否正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ## ERROR 9090 (HY000) : obesi process session not exist
 
 * OceanBase 错误码：9090
