--- a/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/5.ora-02000-to-ora-04999-of-oracle-mode.md
+++ b/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/5.ora-02000-to-ora-04999-of-oracle-mode.md
@@ -491,6 +491,18 @@ ORA-02305：only EXECUTE DEBUG and UNDER privileges are valid for types
 
 * 解决方法：授予或撤销对于类型的 `EXECUTE`、`DEBUG` 或者 `UNDER` 权限。
 
+## ORA-02327：cannot create index on expression with datatype ADT '%.*s'
+
+* OceanBase 错误码：7417
+* SQLSTATE：42000
+* 错误原因：尝试在 ADT（抽象数据类型）表达式上创建索引。
+* 解决方法：检查要创建索引的表结构，确保表结构不包含 ADT 类型的列。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ORA-02377：invalid resource limit %s
 --------------------------------------------------------
 
