--- a/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/8.ora-20000-to-ora-29999-of-oracle-mode.md
+++ b/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/8.ora-20000-to-ora-29999-of-oracle-mode.md
@@ -150,6 +150,48 @@ ORA-22816：unsupported feature with RETURNING clause
   <p>该错误码从 V4.0.0 版本开始引入。</p>
 </main>
 
+## ORA-22858：invalid alteration of datatype
+
+* OceanBase 错误码：7414
+* SQLSTATE：42000
+* 错误原因：尝试更改数据类型时，数据类型不允许更改或更改后的数据类型无效。
+* 解决方法：
+   1. 检查数据类型：检查要更改的数据类型是否允许更改，确保更改后的数据类型有效。
+   2. 检查数据大小：检查要更改的数据大小，确保更改后的数据类型可以容纳所有数据。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ORA-22859：invalid modification of columns
+
+* OceanBase 错误码：7415
+* SQLSTATE：42000
+* 错误原因：尝试修改不允许修改的列或表结构。
+* 解决方法：
+   1. 检查表结构：可以检查要修改的表结构，确保表结构允许进行修改。
+   2. 检查列属性：可以检查要修改的列属性，确保列属性允许进行修改。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ORA-22859：Expected XML tag , got no content
+
+* OceanBase 错误码：7416
+* SQLSTATE：42000
+* 错误原因：在 XML 数据中，缺少标签内容。
+* 解决方法：
+   1. 检查 XML 数据：可以检查 XML 数据是否正确，确保所有标签都有内容。
+   2. 检查 XML 格式：可以检查 XML 格式是否正确，确保所有标签都正确嵌套和关闭。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ## ORA-22903：MULTISET expression not allowed
 
 * OceanBase 错误码：9716
@@ -182,6 +224,20 @@ ORA-22928：invalid privilege on directories
 * 错误原因：尝试授予或撤销对于目录的权限，但是该权限对于目录是无效的。
 
 * 解决方法：只能授予或撤销对于目录的 `CREATE`、`DELETE`、`READ`、`WRITE` 和 `EXECUTE`权限。不要授予或撤销其他权限。
+
+## ORA-22950：cannot ORDER objects without MAP or ORDER method
+
+* OceanBase 错误码：7412
+* SQLSTATE：42000
+* 错误原因： 在比较对象时，对象没有定义 MAP 或 ORDER 方法。
+* 解决方法：
+   1. 定义 MAP 或 ORDER 方法：可以在对象的定义中定义 MAP 或 ORDER 方法，以便在排序时使用。MAP 方法用于将对象映射到一个标量值，ORDER 方法用于比较两个对象的大小。
+   2. 修改排序方式：如果无法定义 MAP 或 ORDER 方法，可以考虑修改排序方式，使用其他方式进行排序，例如使用其他列进行排序。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
 
 ## ORA-22990：LOB locators cannot span transactions
 
