--- a/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/9.ora-30000-to-ora-49999-of-oracle-mode.md
+++ b/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/9.ora-30000-to-ora-49999-of-oracle-mode.md
@@ -45,6 +45,18 @@ ORA-30004：A column value contained the string that the SYS_CONNECT_BY_PATH fun
 
 * 解决方法：为 `SYS_CONNECT_BY_PATH` 函数指定一个其他分隔符，需要确保该分隔符未包含在任何列值中，然后重试操作。
 
+## ORA-30005：missing or invalid WAIT interval
+
+* OceanBase 错误码：5495
+* SQLSTATE：HY000
+* 错误原因：在使用 MySQL 的 WAIT 命令时，指定的等待时间参数不合法或缺失。
+* 解决方法：检查使用 WAIT 命令的语法，确保等待时间参数正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
 ORA-30006：resource busy; acquire with WAIT timeout expired
 -------------------------------------------------------------------------------
 
@@ -442,6 +454,54 @@ ORA-31011：XML parsing failed
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <p>该错误码从 V3.2.4 版本开始引入。</p>
+</main>
+
+## ORA-31012：Given XPATH expression not supported
+
+* OceanBase 错误码：7409
+* SQLSTATE：42000
+* 错误原因：XPath 表达式不被支持。
+* 解决方法：检查使用的 XPath 表达式是否正确，以及数据库版本是否支持使用该 XPath 表达式。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ORA-31013：invalid xpath expression
+
+* OceanBase 错误码：7404
+* SQLSTATE：42000
+* 错误原因：在使用 XPath 表达式时，表达式格式不正确或无效。
+* 解决方法：检查 XPath 表达式以及检查 XML 数据是否正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ORA-31067：XML nodes must be updated with valid nodes and of the same type
+
+* OceanBase 错误码：7418
+* SQLSTATE：42000
+* 错误原因：在更新 XML 节点时，使用了无效的节点或节点类型。
+* 解决方法：检查要更新的节点类型是否正确，确保节点类型匹配。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
+
+## ORA-31188：The specified printing option is invalid
+
+* OceanBase 错误码：7407
+* SQLSTATE：42000
+* 错误原因：指定的打印选项无效。
+* 解决方法：检查打印选项是否正确。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
 </main>
 
 ORA-31600：invalid input value %.\*s for parameter %.\*s in function %.\*s
