--- a/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -1469,7 +1469,7 @@ ORA-00913：too many values
 * OceanBase 错误码：7403
 * SQLSTATE：42000
 * 错误原因：在 INSERT 语句或形式为 ((C,D),(E,F), ...) 的列或值列表中省略了所需的逗号。
-* 解决方法：请更正语法。
+* 解决方法：请更正语法，仔细检查 SQL 语句，查找缺少逗号或逗号使用不正确的位置。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -1527,6 +1527,18 @@ ORA-00932：inconsistent datatypes: left_type=%s right_type=%s
 * SQLSTATE：22000
 
 * 错误原因：数据类型不一致。
+
+## ORA-00932：inconsistent datatypes,inconsistent datatypes: expected %s got %s
+
+* OceanBase 错误码：7402
+* SQLSTATE：22000
+* 错误原因：在 SQL 查询中使用了不兼容的数据类型。
+* 解决方法：检查 SQL 查询语句，找出不一致的数据类型，使用 CAST 或 CONVERT 函数将数据类型转换为相同的类型。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>该错误码从 V4.2.0 版本开始引入。</p>
+</main>
 
 ORA-00933：SQL command not properly ended
 -------------------------------------------------------------
