--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -201,7 +201,7 @@ ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BI
 
 可以根据实际情况，将目的端状态设置为 `DEFER` 或 `ENABLE` 状态，具体操作如下：
 
-1. 用户租户的租户管理员登录到数据库。
+1. `sys` 租户或用户租户的租户管理员登录到数据库。
 
    <main id="notice" type='explain'>
    <h4>说明</h4>
@@ -212,21 +212,33 @@ ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BI
 
    * 启动目的端的归档。
 
-     语句如下：
+     * 系统租户
 
-     ```sql
-     ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='ENABLE';
-     ```
+       ```sql
+       ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='ENABLE' TENANT = tenant_name;
+       ```
+
+     * 用户租户
+
+       ```sql
+       ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='ENABLE';
+       ```
 
      设置后，在该租户打开归档模式后，将会开始归档任务，将日志归档到该目的端指定的路径中。若在设置前已经处于归档模式，将会自动开始归档任务。
 
    * 暂停目的端的归档。
   
-     语句如下：
+     * 系统租户
 
-     ```sql
-     ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='DEFER';
-     ```
+       ```sql
+       ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='DEFER' TENANT = tenant_name;
+       ```
+
+     * 用户租户
+
+       ```sql
+       ALTER SYSTEM SET LOG_ARCHIVE_DEST_STATE='DEFER';
+       ```
 
      设置后，若该租户有正在进行的归档任务，将会暂停归档。暂停归档后，可以再设置目的端状态为 `ENABLE` 来继续归档。
 
