--- a/zh-CN/7.reference/12.database-proxy/17.set-the-maximum-connections.md
+++ b/zh-CN/7.reference/12.database-proxy/17.set-the-maximum-connections.md
@@ -110,6 +110,7 @@
      +----------------+----------+-------+--------+-----------+---------------------------------+-----------+-------+-----------------------------------------------------------------+----------------+-------------------+
      6 rows in set
      ```
+     查询结果中，`VALUE` 列对应的值即为对应的配置项的值。
 
      有关视图 `GV$OB_PARAMETERS` 的更多介绍，请参见 [GV$OB_PARAMETERS](../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/6.gv-ob_parameters-of-mysql-mode.md)。
 
