--- a/zh-CN/7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md
+++ b/zh-CN/7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/261.dba_ob_tenants-oracle.md
@@ -32,3 +32,6 @@
 | READABLE_SCN | NUMBER | NO | 当前租户可读快照版本，对于系统租户和 Meta 租户无意义，显示为 NULL|
 | RECOVERY_UNTIL_SCN | NUMBER | NO | 当前租户最大恢复位点，对于系统租户和 Meta 租户无意义，显示为 NULL|
 | LOG_MODE | VARCHAR2(100) | NO | 归档模式：<ul><li>  `ARCHIVELOG` 指归档模式开启中 </li><li> `NOARCHIVELOG` 指未开启归档模式 </li></ul>|
+| ARBITRATION_SERVICE_STATUS | VARCHAR2(64) | NO | 租户的仲裁服务状态，取值如下：<ul><li>ENABLING 指开启中  </li><li>ENABLED 指开启完成 </li><li>DISABLING 指关闭中 </li><li>DISABLED 指关闭完成 </li></ul>|
+| UNIT_NUM | NUMBER(38) | NO | Zone 内 Unit 的数量<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| COMPATIBLE | VARCHAR2(65536) | NO | 兼容性版本<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
