--- a/zh-CN/7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/177.oceanbase-cdb_ob_table_locations-of-mysql-mode.md
+++ b/zh-CN/7.reference/7.system-views/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/177.oceanbase-cdb_ob_table_locations-of-mysql-mode.md
@@ -21,3 +21,8 @@
 | SVR_PORT | bigint(20) | NO | 副本位置的 PORT 信息 |
 | ROLE | varchar(8) | NO | 副本角色 |
 | REPLICA_TYPE | varchar(18) | NO | 日志流类型，当前仅支持 `FULL`，即：全功能类型 |
+| DUPLICATE_SCOPE | varchar(7) | NO | 表明这个表是否为复制表，取值为：<ul><li>CLUSTER 指是复制表  </li><li>NONE 指是普通表 </li></ul><main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| OBJECT_ID | bigint(20) | NO | 分区对应的对象 ID<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| TABLEGROUP_NAME | varchar(128) | NO | 表对应 Table Group 的名称<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| TABLEGROUP_ID | bigint(20) | NO | 表对应 Table Group 的 ID<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| SHARDING | varchar(10) | NO | 表对应 Table Group 的 Sharding 属性（均衡模式）<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
