--- a/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
+++ b/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
@@ -3211,7 +3211,7 @@ ERROR 3753 (42000) : Cannot create a functional index on a function that returns
 * OceanBase 错误码：5496
 * 兼容 MySQL 错误码：3754
 * 错误原因：在创建函数索引时，使用了自增长列作为函数索引的一部分，而自增长列不能作为函数索引的一部分。
-* 解决方法：修改函数索引：将自增长列从函数索引中移除，或者使用其他列代替自增长列作为函数索引的一部分。
+* 解决方法：修改函数索引，将自增长列从函数索引中移除，或者使用其他列代替自增长列作为函数索引的一部分。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -3223,7 +3223,7 @@ ERROR 3753 (42000) : Cannot create a functional index on a function that returns
 * OceanBase 错误码：5498
 * 兼容 MySQL 错误码：3757
 * 错误原因：在创建函数索引时，使用了返回 BLOB 或 TEXT 类型的表达式，而 BLOB 或 TEXT 类型的表达式不能用于创建函数索引。
-* 解决方法：使用 CAST 函数：可以使用 CAST 函数将 BLOB 或 TEXT 类型的表达式转换为其他类型，然后使用转换后的表达式创建函数索引。
+* 解决方法：使用 CAST 函数，可以使用 CAST 函数将 BLOB 或 TEXT 类型的表达式转换为其他类型，然后使用转换后的表达式创建函数索引。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
