--- a/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/7.ora-10000-to-ora-19999-of-oracle-mode.md
+++ b/zh-CN/7.reference/9.error-code/7.error-code-of-oracle-mode/7.ora-10000-to-ora-19999-of-oracle-mode.md
@@ -352,8 +352,7 @@ ORA-14019：partition bound element must be one of: string, datetime or interval
 * 错误原因：在创建分区表时，使用了不兼容的分区方式，例如在子分区中同时使用 RANGE/LIST 分区和 HASH/KEY 分区。
 * 解决方法：
   * 修改分区方式：如果要在子分区中同时使用 RANGE/LIST 分区和 HASH/KEY 分区，可以考虑修改分区方式，使用兼容的分区方式。注意修改分区方式或拆分分区表可能会影响到现有的数据和应用程序，请谨慎操作。
-  * 分离分区：如果需要使用不兼容的分区方式，可以考虑将分区表拆分为多个表，每个表使用不同的分区方式。错误原因：
-* 解决方法：
+  * 分离分区：如果需要使用不兼容的分区方式，可以考虑将分区表拆分为多个表，每个表使用不同的分区方式。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
