--- a/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/7.7000-7999-of-mysql-mode.md
+++ b/zh-CN/7.reference/9.error-code/6.error-code-of-mysql-mode/7.7000-7999-of-mysql-mode.md
@@ -285,7 +285,7 @@ ERROR 7041 (HY000) : election priority mechanism changed, maybe during upgrading
 ## ERROR 7113 (HY000) : compare tablet transfer seq not match
 
 * OceanBase 错误码：7113
-* 错误原因： 在底层进行 TABLET 的转移时，发现 SEQUENCE**_ _**不匹配。
+* 错误原因：在底层进行 TABLET 的转移时，发现 SEQUENCE 不匹配。
 * 解决方法：请联系技术支持人员协助排查。
 
 <main id="notice" type='explain'>
@@ -296,8 +296,8 @@ ERROR 7041 (HY000) : election priority mechanism changed, maybe during upgrading
 ## ERROR 7114 (HY000) : transfer detect active trans
 
 * OceanBase 错误码：7114
-* 错误原因： 在负载均衡任务底层进行 TABLET 的转移时，检测到有活跃事务。
-* 解决方法： 在负载均衡时开启主动杀事务， 杀事务可以通过 `_enable_balance_kill_transaction` 和 `_balance_kill_transaction_threshold` 配置项查看。若问题还未解决，请联系技术支持人员协助排查。
+* 错误原因：在负载均衡任务底层进行 TABLET 的转移时，检测到有活跃事务。
+* 解决方法：在负载均衡时开启主动杀事务， 杀事务可以通过 `_enable_balance_kill_transaction` 和 `_balance_kill_transaction_threshold` 配置项查看。若问题还未解决，请联系技术支持人员协助排查。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
