--- a/zh-CN/6.manage/5.security-and-permissions/6.security-audit/5.audit-records.md
+++ b/zh-CN/6.manage/5.security-and-permissions/6.security-audit/5.audit-records.md
@@ -48,15 +48,15 @@ PROXY CLIENT ADDRESS:[13] 'xx.xx.xx.xx'
   
 | 字典视图    |   功能说明    |
 |-------------------|-------------|
-| [DBA_AUDIT_EXISTS](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/56.dba_audit_exists-of-oracle-mode.md)     | 显示 `AUDIT EXISTS` 和 `AUDIT NOT EXISTS` 产生的审计跟踪条目。                         |
-| [DBA_AUDIT_OBJECT](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/57.dba_audit_object-of-oracle-mode.md)     | 显示数据库中所有对象的审计跟踪条目。                                                        |
-| [DBA_AUDIT_SESSION](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/58.dba_audit_session-of-oracle-mode.md)    | 显示所有关于 `CONNECT` 和 `DISCONNECT` 的审计跟踪条目。   |
-| [DBA_AUDIT_STATEMENT](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/59.dba_audit_statement-of-oracle-mode.md)  | 显示整个数据库中关于 `GRANT`、`REVOKE`、`AUDIT`、`NOAUDIT`和 `ALTER SYSTEM`语句的审计跟踪条目。 |
-| [DBA_AUDIT_TRAIL](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/60.dba_audit_trail-of-oracle-mode.md)      | 显示所有的审计跟踪条目。                                                              |
-| [USER_AUDIT_OBJECT](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/144.user_audit_object-of-oracle-mode.md)    | 显示当前用户可访问的对象的审计跟踪条目。   |
-| [USER_AUDIT_SESSION](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/145.user_audit_session-of-oracle-mode.md)   | 显示关于当前用户的连接和断开的审计跟踪条目。                                                    |
-| [USER_AUDIT_STATEMENT](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/146.user_audit_statement-of-oracle-mode.md) | 显示当前用户发出的 `GRANT`、`REVOKE`、`AUDIT`、`NOAUDIT` 和 `ALTER SYSTEM` 语句的审计跟踪条目。  |
-| [USER_AUDIT_TRAIL](../../../7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/147.user_audit_trail-of-oracle-mode.md)     | 显示与当前用户相关的所有审计跟踪条目。                                                       |
+| [DBA_AUDIT_EXISTS](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/56.dba_audit_exists-of-oracle-mode.md)     | 显示 `AUDIT EXISTS` 和 `AUDIT NOT EXISTS` 产生的审计跟踪条目。                         |
+| [DBA_AUDIT_OBJECT](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/57.dba_audit_object-of-oracle-mode.md)     | 显示数据库中所有对象的审计跟踪条目。                                                        |
+| [DBA_AUDIT_SESSION](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/58.dba_audit_session-of-oracle-mode.md)    | 显示所有关于 `CONNECT` 和 `DISCONNECT` 的审计跟踪条目。   |
+| [DBA_AUDIT_STATEMENT](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/59.dba_audit_statement-of-oracle-mode.md)  | 显示整个数据库中关于 `GRANT`、`REVOKE`、`AUDIT`、`NOAUDIT`和 `ALTER SYSTEM`语句的审计跟踪条目。 |
+| [DBA_AUDIT_TRAIL](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/60.dba_audit_trail-of-oracle-mode.md)      | 显示所有的审计跟踪条目。                                                              |
+| [USER_AUDIT_OBJECT](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/144.user_audit_object-of-oracle-mode.md)    | 显示当前用户可访问的对象的审计跟踪条目。   |
+| [USER_AUDIT_SESSION](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/145.user_audit_session-of-oracle-mode.md)   | 显示关于当前用户的连接和断开的审计跟踪条目。                                                    |
+| [USER_AUDIT_STATEMENT](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/146.user_audit_statement-of-oracle-mode.md) | 显示当前用户发出的 `GRANT`、`REVOKE`、`AUDIT`、`NOAUDIT` 和 `ALTER SYSTEM` 语句的审计跟踪条目。  |
+| [USER_AUDIT_TRAIL](../../../7.reference/7.system-views/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/147.user_audit_trail-of-oracle-mode.md)     | 显示与当前用户相关的所有审计跟踪条目。                                                       |
 
 查看 `DBA_AUDIT_TRAIL` 中的审计记录。示例如下：
 
