--- a/zh-CN/7.reference/11.performance-test/1.run-the-tpc-h-benchmark-on-oceanbase-database.md
+++ b/zh-CN/7.reference/11.performance-test/1.run-the-tpc-h-benchmark-on-oceanbase-database.md
@@ -41,7 +41,7 @@ TPC-H 基准测试由 TPC-D（由 TPC 于 1994 年制定的标准，用于决策
 
 * OBClient：详细信息，请参考 [OBClient 文档](https://github.com/oceanbase/obclient/blob/master/README.md)
 
-* OceanBase 数据库：详细信息，请参考 [快速体验 OceanBase 数据库](../../../2.quickstart/1.quickly-experience-oceanbase-for-community.md)
+* OceanBase 数据库：详细信息，请参考 [快速体验 OceanBase 数据库](../../2.quickstart/1.quickly-experience-oceanbase-for-community.md)
 
 * iops：建议磁盘 iops 在 10000 以上
 
