--- a/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
+++ b/zh-CN/6.manage/5.security-and-permissions/3.access-control/4.1rpc-connection-authentication.md
@@ -39,19 +39,19 @@ OceanBase 数据库 V4.2.0 版本的 RPC 连接认证的功能，只有在启用
 
 以 sys 租户身份登录 OceanBase 数据库，依次执行如下命令。
 
-1. 开启 SSL 连接。有关开启 SSL 连接的更多信息，请参见 [ssl_client_authentication](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/194.ssl_client_authentication.md)。
+1. 开启 SSL 连接。有关开启 SSL 连接的更多信息，请参见 [ssl_client_authentication](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/194.ssl_client_authentication.md)。
 
    ```sql
    ALTER SYSTEM SET ssl_client_authentication=True;
    ```
 
-2. 将客户端的认证方式设置为 `SSL_NO_ENCRYPT`。有关客户端认证的详细信息，请参见 [rpc_client_authentication_method](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/281.rpc_client_authentication_method.md)。
+2. 将客户端的认证方式设置为 `SSL_NO_ENCRYPT`。有关客户端认证的详细信息，请参见 [rpc_client_authentication_method](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/281.rpc_client_authentication_method.md)。
 
    ```sql
    ALTER SYSTEM SET rpc_client_authentication_method = 'SSL_NO_ENCRYPT';
    ```
 
-3. 将服务端的认证方式设置为 `SSL_NO_ENCRYPT`。有关服务端认证的详细信息，请参见 [rpc_server_authentication_method](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/282.rpc_server_authentication_method.md)。
+3. 将服务端的认证方式设置为 `SSL_NO_ENCRYPT`。有关服务端认证的详细信息，请参见 [rpc_server_authentication_method](../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/3.cluster-level-configuration-items/282.rpc_server_authentication_method.md)。
 
    ```sql
    ALTER SYSTEM SET rpc_server_authentication_method = 'SSL_NO_ENCRYPT';
