--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/1.system-configuration-items-overview.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/1.system-configuration-items-overview.md
@@ -48,4 +48,4 @@ obclient> SHOW PARAMETERS LIKE 'max_syslog_file_count';
 
 有关配置项的相关信息，请参见 [系统配置项总览](2.system-configuration-items-overview-list.md)。
 
-更多配置项的查看和设置操作，请参见 [设置参数](../../2.administrator-guide/2.basic-database-management/2.configuration-management/2.set-parameters.md) 章节。
+更多配置项的查看和设置操作，请参见 [设置参数](../../2.system-management/2.configuration-management/2.set-parameters.md) 章节。
