--- a/zh-CN/7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/111.query_cache_type-global.md
+++ b/zh-CN/7.reference/8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/111.query_cache_type-global.md
@@ -13,4 +13,4 @@ query_cache_type 用于查询缓存类型。
 | 默认值    | OFF                                                         |
 | 取值范围   | <li> OFF：不缓存或检索结果。   <li> ON：缓存除了 `SELECT SQL_NO_CACHE ...`查询的所有结果。   <li> DEMAND：只缓存 `SELECT SQL_CACHE ... `查询的结果。    |
 | 生效范围   | Global |
-| 是否可修改  | 该变量支持在创建租户时指定，租户创建后不能通过 SQL 语句修改。具体设置请参见 [设置变量](../../../2.administrator-guide/2.basic-database-management/2.configuration-management/3.set-variables.md) 章节 |
+| 是否可修改  | 该变量支持在创建租户时指定，租户创建后不能通过 SQL 语句修改。具体设置请参见 [设置变量](../../../2.system-management/2.configuration-management/3.set-variables.md) 章节 |
