--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/4.fast-parameterization.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/4.fast-parameterization.md
@@ -154,13 +154,13 @@ obclient> SELECT c1, c2, c3 FROM t1 WHERE c1 = @1 and c2 like @2 ORDER BY @3;
 
 ## 参数化执行计划的区分策略
 
-OceanBase 数据库还支持通过 Hint 控制是否对 SQL 语句中的字面量做参数改写，详细信息参见 [CURSOR_SHARING_EXACT Hint](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/2.hint-list-of-oracle-mode/7.other-hints-of-oracle-mode.md)。
+OceanBase 数据库还支持通过 Hint 控制是否对 SQL 语句中的字面量做参数改写，详细信息参见 [CURSOR_SHARING_EXACT Hint](../../../5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/2.hint-list-of-oracle-mode/7.other-hints-of-oracle-mode.md)。
 
 对于一条 SQL 请求，使用如下策略区分此条 SQL 要命中参数化的计划还是要命中非参数化的计划：
 
 1. 查看 `cursor_sharing`
 
-   首先查看 `cursor_sharing` 系统变量，具有不同 `cursor_sharing` 的 SQL 一定会命中到不同的计划。请参见 [cursor_sharing](../../../../7.reference/5.system-reference/2.system-variable/3.global-system-variable/20.cursor_sharing-global.md)。
+   首先查看 `cursor_sharing` 系统变量，具有不同 `cursor_sharing` 的 SQL 一定会命中到不同的计划。请参见 [cursor_sharing](../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/20.cursor_sharing-global.md)。
 
 2. 查看 `query_sql`
 
