--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
@@ -439,14 +439,14 @@ obclient> DESC V$SQL_MONITOR_STATNAME;
 
 ## 相关文档
 
-[DISPLAY_ACTIVE_SESSION_PLAN](../../../4.development-reference/3.pl-reference/2.pl-mysql/10.pl-system-package-mysql/207.dbms-xplan-mysql/2.display-active-session-plan-of-mysql-mode.md)。
+[DISPLAY_ACTIVE_SESSION_PLAN](../../../5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/2.display-active-session-plan-of-oracle-mode.md)
 
-[(G)V$OB_SQL_PLAN](后续补齐)
+[(G)V$OB_SQL_PLAN](../../../7.system-views/4.system-view-of-mysql-mode/)
 
-[(G)V$OB_PLAN_CACHE_PLAN_EXPLAIN](../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/26.gv-plan_cache_plan_explain-of-mysql-mode.md)
+[(G)V$OB_PLAN_CACHE_PLAN_EXPLAIN](../../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/26.gv-plan_cache_plan_explain-of-mysql-mode.md)
 
-[GV$SQL_PLAN_MONITOR](../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/72.v-sql_plan_monitor-of-mysql-mode.md)
+[GV$SQL_PLAN_MONITOR](../../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/29.gv-sql_plan_monitor-of-mysql-mode.md)
 
-[V$SQL_MONITOR_STATNAME](../../../5.system-reference/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/89.v-sql_monitor_statname-of-mysql-mode.md)
+[V$SQL_MONITOR_STATNAME](../../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/89.v-sql_monitor_statname-of-mysql-mode.md)
 
 
