--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/17.alter-tablegroup-of-mysql-mode.md
@@ -209,6 +209,6 @@
 
 * [DROP TABLEGROUP](38.drop-tablegroup-of-mysql-mode.md)
   
-* [管理表组内的表](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/6.manage-tables-within-a-table-group-of-mysql-mode.md)
+* [管理表组内的表](../../../../3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/1.about-table-groups-of-mysql-mode.md)
 
-* [查看表组信息](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/3.view-the-information-of-a-table-group-of-mysql-mode.md)
+* [查看表组信息](../../../../3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/3.view-the-information-of-a-table-group-of-mysql-mode.md)
