--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/11.alter-tablegroup-of-oracle-mode.md
@@ -213,10 +213,10 @@
 
 ## 相关文档 
 
-* [CREATE TABLEGROUP](27.create-tablegroup-of-mysql-mode.md)
+* [CREATE TABLEGROUP](25.create-tablegroup-of-oracle-mode.md)
 
-* [DROP TABLEGROUP](38.drop-tablegroup-of-mysql-mode.md)
+* [DROP TABLEGROUP](40.drop-tablegroup-of-oracle-mode.md)
   
-* [管理表组内的表](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/6.manage-tables-within-a-table-group-of-mysql-mode.md)
+* [管理表组内的表](../../../../../3.database-object-management/2.manage-object-of-oracle-mode/3.manage-table-groups-of-oracle-mode/6.manage-tables-within-a-table-group-of-oracle-mode.md)
 
-* [查看表组信息](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/4.manage-table-groups-of-mysql-mode/3.view-the-information-of-a-table-group-of-mysql-mode.md)
+* [查看表组信息](../../../../../3.database-object-management/2.manage-object-of-oracle-mode/3.manage-table-groups-of-oracle-mode/3.view-the-information-of-a-table-group-of-oracle-mode.md)
