--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/25.create-tablegroup-of-oracle-mode.md
@@ -217,7 +217,7 @@ tablegroup_option:
 
 * [DROP TABLEGROUP](40.drop-tablegroup-of-oracle-mode.md)
   
-* [管理表组内的表](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/3.manage-table-groups-of-mysql-mode/6.manage-tables-within-a-table-group-of-oracle-mode.md)
+* [管理表组内的表](../../../../../3.database-object-management/2.manage-object-of-oracle-mode/3.manage-table-groups-of-oracle-mode/6.manage-tables-within-a-table-group-of-oracle-mode.md)
 
-* [查看表组信息](../../../../2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/3.manage-table-groups-of-mysql-mode/3.view-the-information-of-a-table-group-of-oracle-mode.md)
+* [查看表组信息](../../../../../3.database-object-management/2.manage-object-of-oracle-mode/3.manage-table-groups-of-oracle-mode/3.view-the-information-of-a-table-group-of-oracle-mode.md)
 
