--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md
@@ -46,7 +46,7 @@ dml_statement:
 
 使用 `EXPLAIN PARTITITIONS` 也可用于检查涉及分区表的查询。如果检查针对非分区表的查询，则不会产生错误，但 `PARTIONS` 列的值始终为 `NULL`。
 
-特别地，用户可以使用 `INTO table_name` SQL 语句将 `EXPLAIN` 的计划信息保存到指定表内，默认查询到 `PLAN_TABLE` 表内；使用 `SET statement_id` 语句可以将当前查询使用字符串标记，以方便后续查询该 SQL 的计划信息，默认使用空字符串作为信息标记。更多详细的信息，请参见 [EXPLAIN（MySQL 模式）](../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md) 和 [EXPLAIN（Oracle 模式）](../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.explain-of-oracle-mode.md)。
+特别地，用户可以使用 `INTO table_name` SQL 语句将 `EXPLAIN` 的计划信息保存到指定表内，默认查询到 `PLAN_TABLE` 表内；使用 `SET statement_id` 语句可以将当前查询使用字符串标记，以方便后续查询该 SQL 的计划信息，默认使用空字符串作为信息标记。更多详细的信息，请参见 [EXPLAIN](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md)。
 
 对于复杂的执行计划，可以使用 `PRETTY` 或者 `PRETTY_COLOR` 选项将计划树中的父节点和子节点使用树线或彩色树线连接起来，使得执行计划展示更方便阅读。示例如下：
 
@@ -222,8 +222,6 @@ Outputs & filters:
 
 ## 相关文档
 
-[EXPLAIN（MySQL 模式）](../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md) 
-
-[EXPLAIN（Oracle 模式）](../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.explain-of-oracle-mode.md)
+[EXPLAIN](../../../5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/53.explain-of-mysql-mode.md) 
 
 [执行计划算子](2.execution-plan-operator/1.table-scan.md)
