--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/10.character-set-and-collation-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/10.character-set-and-collation-of-oracle-mode.md
@@ -160,7 +160,7 @@ obclient > SELECT * FROM t1 WHERE c = '字';
 
 [nls_sort](../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/57.nls_sort-global.md)。
 
-[nls_characterset](../../../../5.system-reference/2.system-variable/3.global-system-variable/45.nls_characterset-global.md)。
+[nls_characterset](../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/45.nls_characterset-global.md)。
 
 [nls_nchar_characterset](../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/54.nls_nchar_characterset-global.md)。
 
