--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/5.real-time-execution-plan-display.md
@@ -441,7 +441,7 @@ obclient> DESC V$SQL_MONITOR_STATNAME;
 
 [DISPLAY_ACTIVE_SESSION_PLAN](../../../5.sql-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/207.dbms-xplan-oracle/2.display-active-session-plan-of-oracle-mode.md)
 
-[(G)V$OB_SQL_PLAN](../../../7.system-views/4.system-view-of-mysql-mode/)
+[(G)V$OB_SQL_PLAN](../../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/148.gv-ob_sql_plan-of-mysql-mode.md)
 
 [(G)V$OB_PLAN_CACHE_PLAN_EXPLAIN](../../../7.system-views/4.system-view-of-mysql-mode/3.performance-view-of-mysql-mode/26.gv-plan_cache_plan_explain-of-mysql-mode.md)
 
