--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/1.overview-of-obproxy-management.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/1.overview-of-obproxy-management.md
@@ -39,7 +39,7 @@ OCP 为 ODP 提供以下管理功能。
 | [删除 OBProxy 集群](2.manage-obproxy-clusters/3.delete-obproxy-cluster.md)             | 您可通过该操作删除 OBProxy 集群。                            |
 | [升级 OBProxy 集群下全部 OBProxy](2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md)  | 您可通过该操作升级 OBProxy 集群中所有的 OBProxy。                |
 | [重启 OBProxy 集群下的全部 OBProxy](2.manage-obproxy-clusters/5.restart-all-obproxy-nodes-in-obproxy-cluster.md) | 您可通过该操作重启 OBProxy 集群下全部 OBProxy。                 |
-| [管理 OBProxy 连接的 OB 集群](2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md)      | 您可通过 OCP 为 OBProxy 添加可连接的 OB 集群或删除已连接的 OB 集群。    |
+| [管理 OBProxy 连接的 OceanBase 集群](2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md)      | 您可通过 OCP 为 OBProxy 添加可连接的 OB 集群或删除已连接的 OB 集群。    |
 | [OBProxy 集群性能监控](2.manage-obproxy-clusters/7.performance-monitoring-of-obproxy-cluster.md)            | 您可以在 OCP 上查看 OBProxy 集群的性能监控信息，包括了服务监控信息和系统监控信息。 |
 | [添加 OBProxy](3.manage-obproxy/1.add-obproxy.md)                | 您可通过该操作向 OBProxy 集群中添加 OBProxy。                  |
 |[启动 OBProxy](3.manage-obproxy/2.start-obproxy.md)|您可通过该操作启动 OBProxy。|
