--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/5.restart-all-obproxy-nodes-in-obproxy-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/5.restart-all-obproxy-nodes-in-obproxy-cluster.md
@@ -16,19 +16,19 @@
 
 2. 在左侧导航栏单击 **OBProxy**。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **总览** 页面。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **概览** 页面。
 
-4. 单击 **全部重启**。
+4. 在页面右上角，单击 **...** 图标，选择 **全部重启**。
 
-   ![09162146](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3073922361/p327471.png)
+   <main id="notice" type='notice'>
+   <h4>注意</h4>
+   <p>重启 OBProxy 会出现连接中断，请谨慎操作。</p>
+   </main>
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>重启 OBProxy 会出现连接中断，请谨慎操作。</p>
-  </main>
+   ![restart-cluster](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/odp-management/delete-odp-cluster.png)
 
 5. 在弹出框中单击 **重启**。
 
-   可单击弹出框中的 **查看任务** 查看详细进展。**任务状态** 显示为 **完成**，即表示重启成功。
+   您可通过弹出框中的 **查看任务** 按钮，查看重启进度。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5716081461/p352534.png)
+   当该任务状态为 **完成** ，且集群 **概览** 页的 **OBProxy 列表** 中，所有 OBProxy 的状态为 **运行中** 时，则表示重启成功。
