--- a/zh-CN/15.oceanbase-database-overview/10.transaction-management/2.transaction-concurrency-and-consistency/3.concurrency-control/2.lock-mechanism.md
+++ b/zh-CN/15.oceanbase-database-overview/10.transaction-management/2.transaction-concurrency-and-consistency/3.concurrency-control/2.lock-mechanism.md
@@ -20,7 +20,7 @@ WHERE  GOOD_ID = ?
 AND    LOCATION = ?;
 ```
 
-在上述 SQL 中，根据用户填入的货物 ID 和 地址，去更新对应的价格和存量。对应事务中的一个 SQL，在事务结束前，对应货物 ID 和 地址的数据的一行会被加上行锁，所有并发的更新都会被阻塞并等待。从而预防并法的修改导致的脏写（Dirty Write）。由此可见用户在更新数据的同时，隐式地为修改的数据行上加上了对应的锁，用户无需显示地指示锁的范围等的情况下, 就可以依赖 OceanBase 数据库内部的机制做到并发控制的效果。
+在上述 SQL 中，根据用户填入的货物 ID 和 地址，去更新对应的价格和存量。对应事务中的一个 SQL，在事务结束前，对应货物 ID 和 地址的数据的一行会被加上行锁，所有并发的更新都会被阻塞并等待。从而预防并发的修改导致的脏写（Dirty Write）。由此可见用户在更新数据的同时，隐式地为修改的数据行上加上了对应的锁，用户无需显示地指示锁的范围等的情况下, 就可以依赖 OceanBase 数据库内部的机制做到并发控制的效果。
 
 当然用户可以显式地制定使用锁机制。如下所示是一个很常见的业务 SQL 来互斥地获取货物的信息。
 
